--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ display=swap" rel="stylesheet">
           </div>
         </div>
         <section class="my-12">
-          <h1 class="font-bold text-4xl text-center">latest News</h1>
+          <h1 class="font-bold text-4xl text-center">Latest News</h1>
           <div class="grid grid-cols-1 gap-10 lg:grid-cols-3 md:grid-cols-2 mt-12">
             <div class="card bg-base-100 p-4 border space-y-4">
               <img src="./images/others/latest1.png" alt="">
@@ -278,7 +278,7 @@ display=swap" rel="stylesheet">
           </div>
         </section>
         <section>
-          <h1 class="text-center font-bold text-4xl">Happy <span class="text-color-primary">Clients says</span></h1>
+          <h1 class="text-center font-bold text-4xl">Frequently Asked  <span class="text-color-primary">Questions</span></h1>
           <div class="grid lg:grid-cols-2 grid-cols-1 items-center lg:gap-0 gap-4  mt-12">
             <img class="mx-auto" src="./images/others/faq.png" alt="">
       <div class="space-y-4">
